--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,13 +1,13 @@
 <resources>
-    <string name="app_name">Pcap</string>
+
     <string name="all">Capture all Packet</string>
     <string name="ssl">SSL</string>
     <string name="find">Capture</string>
-    <string name="history">History</string>
-    <string name="setting">Setting</string>
+
+
     <string name="clear_history">Clear History Data</string>
     <string name="success_clear_history_data">Success clear history data!</string>
-    <string name="select_package">Select the app which you want capture packet. </string>
+
     <string name="system">System</string>
     <string name="unknow">Unknow</string>
     <string name="capture_data">History Capture Packet</string>
@@ -31,4 +31,12 @@
     <string name="no_data">Data not existed!!</string>
     <string name="show_udp">Show UDP</string>
     <string name="save_udp">Save UDP Packet</string>
+
+    <string name="app_name">PCAP</string>
+    <string name="setting">Setting</string>
+    <string name="history">History</string>
+    <string name="instrument">Instrument</string>
+    <string name="select_apps">Select Apps</string>
+    <string name="select_all">Select All</string>
+    <string name="ok">OK</string>
 </resources>
