--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,4 +39,7 @@
     <string name="select_apps">Select Apps</string>
     <string name="select_all">Select All</string>
     <string name="ok">OK</string>
+    <string name="clear">Clear</string>
+    <string name="net_session">Net Sessions</string>
+
 </resources>
